--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (1.2.0.7) claire estelle; urgency=low
+
+  * sql requires some funky clauses for null 
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 21:35:27 +0100
+
 bubba-album (1.2.0.6) claire estelle; urgency=low
 
   * "active records" doesn't handle complex stuff, thus fix in 1.2.0.5 breaks
