--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (1.9.1) claire; urgency=low
+
+  * update album for 2.0 release
+
+ -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Mar 2010 19:39:35 +0100
+
 bubba-album (1.3.0) claire estelle; urgency=low
 
   * Updated version number. 
