--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (1.9.5) claire; urgency=low
+
+  * fix filename character encoding field 
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 30 Mar 2010 21:27:17 +0200
+
 bubba-album (1.9.4) claire; urgency=low
 
   * fix style relative new admin update
