--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 bubba-album (2.0.0.5) claire; urgency=low
 
   * initial new style 
+  * database upgrade 
 
- -- Carl Fürstenberg <carl@excito.com>  Fri, 21 May 2010 17:06:05 +0200
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 21 May 2010 18:06:28 +0200
 
 bubba-album (2.0.0.4) estelle claire; urgency=low
 
