--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre1) vincent; urgency=low
+
+  * fix order in sql init code
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 21 Jun 2010 14:47:35 +0200
+
 bubba-album (2.0.0.6) lucid; urgency=low
 
   * 
