--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre2) vincent; urgency=low
+
+  * fix php 5.3 changes, and wrong linking paths 
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 21 Jun 2010 14:59:58 +0200
+
 bubba-album (2.1~pre1) vincent; urgency=low
 
   * fix order in sql init code
