slowing down to ⅕Hz for album slideshow

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre9) vincent; urgency=low
+
+  * slowing down to ⅕Hz for album slideshow
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 28 Jul 2010 17:23:21 +0200
+
 bubba-album (2.1~pre8) vincent; urgency=low
 
   * adding album images (Closes: #1480)
