--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre10) vincent; urgency=low
+
+  * correct value this time for speed 
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 28 Jul 2010 17:38:45 +0200
+
 bubba-album (2.1~pre9) vincent; urgency=low
 
   * slowing down to ⅕Hz for album slideshow
