--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+bubba-album (2.1~pre11) vincent; urgency=low
+
+  * Fixed permissions dialog. (Closes: #1476)
+  * Fixed error message when trying to log in with incorrect pwd. (Closes: #1512)
+  * Removed possibility to change permission for users when access is public (Closes: #1475)
+  * Fixed tooltip on toplevel icons. (Closes: #1490)
+  * Todo, add missing links to iCheckbox and missing images 
+
+ -- PA Nilsson <pa@excito.com>  Fri, 13 Aug 2010 16:00:01 +0200
+
 bubba-album (2.1~pre10) vincent; urgency=low
 
   * correct value this time for speed 
