--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre14) hugo vincent; urgency=low
+
+  * Using 'B3' texts and icons.
+
+ -- PA Nilsson <pa@excito.com>  Fri, 27 Aug 2010 08:26:57 +0200
+
 bubba-album (2.1~pre13) hugo vincent; urgency=low
 
   * Fixed some texts and UI details.
