--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1~pre17) hugo vincent; urgency=low
+
+  * Fixed linebreaks in help file. 
+
+ -- PA Nilsson <pa@excito.com>  Tue, 31 Aug 2010 09:17:47 +0200
+
 bubba-album (2.1~pre16) hugo vincent; urgency=low
 
   * Added help texts.
