--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.3) lucid; urgency=low
+
+  * Fixed wrap of button in toolbar in IE7. (Closes: #1583) 
+
+ -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 14:13:47 +0200
+
 bubba-album (2.1.2) hugo vincent; urgency=low
 
   * Inital language support
