--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-bubba-album (2.1.3) lucid; urgency=low
+bubba-album (2.1.3) hugo vincent; urgency=low
 
   * Fixed wrap of button in toolbar in IE7. (Closes: #1583) 
+  * Fixed tooltips in user dialog. (Closes: #1532) 
 
- -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 14:13:47 +0200
+ -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 16:20:58 +0200
 
 bubba-album (2.1.2) hugo vincent; urgency=low
 
