--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ bubba-album (2.1.3) hugo vincent; urgency=low
 
   * Fixed wrap of button in toolbar in IE7. (Closes: #1583) 
   * Fixed tooltips in user dialog. (Closes: #1532) 
+  * Only reload page if new language != current language. (Closes: #1588)
 
- -- PA Nilsson <pa@excito.com>  Fri, 22 Oct 2010 16:20:58 +0200
+ -- PA Nilsson <pa@excito.com>  Mon, 25 Oct 2010 14:44:08 +0200
 
 bubba-album (2.1.2) hugo vincent; urgency=low
 
