--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubba-album (2.1.4) hugo vincent; urgency=low
+
+  * Checking manager access prior to allowing actions on buttons. (Closes: #1549)
+  * Checking manager access from admin controller instead of cookie on reload of page, fixing user admin bug. (Closes: #1608)
+
+ -- PA Nilsson <pa@excito.com>  Mon, 01 Nov 2010 14:32:22 +0100
+
 bubba-album (2.1.3) hugo vincent; urgency=low
 
   * Fixed wrap of button in toolbar in IE7. (Closes: #1583) 
