--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.5) hugo vincent; urgency=low
+
+  * Fixed sorting of albums. (Closes: #1614)
+
+ -- PA Nilsson <pa@excito.com>  Fri, 05 Nov 2010 21:28:00 +0100
+
 bubba-album (2.1.4) hugo vincent; urgency=low
 
   * Checking manager access prior to allowing actions on buttons. (Closes: #1549)
