--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.6) hugo vincent; urgency=low
+
+  * Adding sample album data 
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 25 Mar 2011 16:16:43 +0100
+
 bubba-album (2.1.5) hugo vincent; urgency=low
 
   * Fixed sorting of albums. (Closes: #1614)
