--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.7) hugo vincent; urgency=low
+
+  * Fix rename button (Closes: 1647) 
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 25 Mar 2011 16:38:32 +0100
+
 bubba-album (2.1.6) hugo vincent; urgency=low
 
   * Adding sample album data 
