--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.8) hugo vincent; urgency=low
+
+  * Adding PNG support using imagemagick 
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 28 Mar 2011 15:27:21 +0200
+
 bubba-album (2.1.7) hugo vincent; urgency=low
 
   * Fix rename button (Closes: 1647) 
