--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubba-album (2.1.11) hugo vincent; urgency=low
+
+  * Fix typo klass → class
+  * Adding natural sorting ot the images
+  * Adding Spanish user contributed translation
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 20 May 2011 14:59:27 +0200
+
 bubba-album (2.1.10) hugo vincent; urgency=low
 
   * update thumb waiting image 
