--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.1.12) hugo vincent; urgency=low
+
+  * Install sample data
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 27 May 2011 15:18:52 +0200
+
 bubba-album (2.1.11) hugo vincent; urgency=low
 
   * Fix typo klass → class
