--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bubba-album (2.3~rc2) vincent hugo; urgency=low
+
+  * Remove executable flag on all images
+  * Bump standards version
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 12 Jul 2011 14:44:19 +0200
+
 bubba-album (2.3~rc1) vincent hugo; urgency=low
 
   * Remove focus of first input flag
