--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubba-album (2.3) vincent hugo; urgency=low
+
+  * Bumping version for release
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 27 Jul 2011 16:12:46 +0200
+
 bubba-album (2.3~rc2) vincent hugo; urgency=low
 
   * Remove executable flag on all images
